--- a/views/main.html
+++ b/views/main.html
@@ -1,7 +1,14 @@
+<div class="col" id="prompt-container">
+  <form>
+    <input type="text" id="prompt" ng-model="prompt">
+    <button type="submit" class="btn btn-primary" ng-click="submitPrompt(prompt)">Create</button>
+  </form>
+</div>
+
 <div class="col" id="description">
   <p ng-class="{ 'other-step': step != 'load' }">1. Load an image.</p>
   <p ng-class="{ 'other-step': step != 'select' }">2. Click some points on the image to select your color palette.</p>
-  <p ng-class="{ 'other-step': step != 'select' || palette.length < 2 }">3. Click PBNify and the image will be converted to a paint by number template.</p>
+  <p ng-class="{ 'other-step': step != 'select' || palette.length < 2 }">3. Click Go and the image will be converted to a paint by number template.</p>
   <p ng-class="{ 'other-step': step != 'result' }">4. Save the outline and palette, print them out, and paint/color.</p>
   <p ng-class="'other-step'"><em>Privacy note: Your image will only be loaded into the browser on your computer. Nothing will be uploaded anywhere.</em></p>
 </div>
@@ -42,7 +49,7 @@
 	 ng-show="step == 'select' && palette.length > 0">clear palette</button>
     
     <button type="button" class="btn btn-primary" ng-click="pbnify()"
-	 ng-show="step == 'select' && palette.length > 1">PBNify</button>
+	 ng-show="step == 'select' && palette.length > 1">Go</button>
     
     <button type="button" class="btn btn-secondary" ng-click="recolor()"
 	 ng-show="step == 'result'">recolor</button>
