--- a/web/views/main.html
+++ b/web/views/main.html
@@ -1,32 +1,39 @@
-<div class="col" id="prompt-container">
-  <form>
-    <input type="text" id="prompt" ng-model="prompt" ng-disabled="loadingImage">
-    <button type="submit" class="btn btn-primary" ng-disabled="loadingImage" ng-click="submitPrompt(prompt)">Create</button>
-  </form>
-  <h3 ng-show="loadingImage">Image Loading...</h3>
-</div>
-
 <div class="col" id="description">
-  <p ng-class="{ 'other-step': step != 'load' }">1. Enter a prompt for the AI to generate an image</p>
+  <p ng-class="{ 'other-step': step != 'load' }">
+    1. Enter a prompt for the AI to generate an image (or upload one below)
+  <ul>
+    <li ng-class="{ 'other-step': step != 'load' }">
+      <i>E.g., "An oil painting of a tree in a field in an impressionist style"</i>
+    </li>
+  </ul>
+  <div class="col" id="prompt-container">
+    <form>
+      <input type="text" id="prompt" ng-model="prompt" ng-disabled="loadingImage" placeholder="A pencil drawing of...">
+      <button type="submit" class="btn btn-primary" ng-disabled="loadingImage"
+        ng-click="submitPrompt(prompt)">Generate</button>
+    </form>
+    <h3 ng-show="loadingImage">Image Loading...</h3>
+  </div>
+  </p>
   <p ng-class="{ 'other-step': step != 'select' }">2. Click some points on the image to select your color palette.</p>
-  <p ng-class="{ 'other-step': step != 'select' || palette.length < 2 }">3. Click Go and the image will be converted to a paint by number template.</p>
+  <p ng-class="{ 'other-step': step != 'select' || palette.length < 2 }">3. Click Go and the image will be converted to
+    a paint by number template.</p>
   <p ng-class="{ 'other-step': step != 'result' }">4. Save the outline and palette, print them out, and paint/color.</p>
-  <p ng-class="'other-step'"><em>Privacy note: Your image will only be loaded into the browser on your computer. Nothing will be uploaded anywhere.</em></p>
 </div>
 
 
 <div class="col" ng-show="step == 'load'">
   <label id="widthSliderLabel" for="widthSlider">Resize width to:
-  <span id="widthSliderNumber">800</span>px</label>
+    <span id="widthSliderNumber">800</span>px</label>
   <input type="range" min="400" max="2000" step="10" value="800" id="widthSlider"
-	 oninput="document.getElementById('widthSliderNumber').innerHTML = this.value;">
+    oninput="document.getElementById('widthSliderNumber').innerHTML = this.value;">
 </div>
 
 <div class="col" ng-show="step == 'load'">
   <label id="darknessSliderLabel" for="darknessSlider">Outline darkness:
-  <span id="darknessSliderNumber" style="color: rgb(153, 153, 153);">40</span></label>
+    <span id="darknessSliderNumber" style="color: rgb(153, 153, 153);">40</span></label>
   <input type="range" min="1" max="100" step="1" value="40" id="darknessSlider"
-	 oninput="document.getElementById('darknessSliderNumber').innerHTML = this.value; var gray = Math.round(255 * (1 - this.value / 100)); document.getElementById('darknessSliderNumber').style.color = 'rgb('+gray+', '+gray+', '+gray+')';">
+    oninput="document.getElementById('darknessSliderNumber').innerHTML = this.value; var gray = Math.round(255 * (1 - this.value / 100)); document.getElementById('darknessSliderNumber').style.color = 'rgb('+gray+', '+gray+', '+gray+')';">
 </div>
 
 
@@ -41,40 +48,35 @@
 
 <div class="col" id="toolbar">
   <div id="buttons" ng-show="step != 'process'">
-    
+
     <button type="button" class="btn btn-secondary" ng-click="newImage()"
-	 ng-show="step == 'select' || step == 'result'">new image</button>
-    
-    <button type="button" class="btn btn-secondary"
-	 ng-click="clearPalette()"
-	 ng-show="step == 'select' && palette.length > 0">clear palette</button>
-    
+      ng-show="step == 'select' || step == 'result'">new image</button>
+
+    <button type="button" class="btn btn-secondary" ng-click="clearPalette()"
+      ng-show="step == 'select' && palette.length > 0">clear palette</button>
+
     <button type="button" class="btn btn-primary" ng-click="pbnify()"
-	 ng-show="step == 'select' && palette.length > 1">Go</button>
-    
-    <button type="button" class="btn btn-secondary" ng-click="recolor()"
-	 ng-show="step == 'result'">recolor</button>
-    
+      ng-show="step == 'select' && palette.length > 1">Go</button>
+
+    <button type="button" class="btn btn-secondary" ng-click="recolor()" ng-show="step == 'result'">recolor</button>
+
     <div class="btn-group" role="group" ng-show="step == 'result'">
-      <button type="button" class="btn btn-primary"
-	   ng-click="viewFilled()" ng-show="step == 'result'">filled</button>
-      <button id="save-filled" type="button" class="btn btn-success"
-	      ng-click="saveFilled()" target="_blank">save</button>
+      <button type="button" class="btn btn-primary" ng-click="viewFilled()" ng-show="step == 'result'">filled</button>
+      <button id="save-filled" type="button" class="btn btn-success" ng-click="saveFilled()"
+        target="_blank">save</button>
     </div>
-    
+
     <div class="btn-group" role="group" ng-show="step == 'result'">
-      <button type="button" class="btn btn-primary" ng-click="viewOutline()"
-	   ng-show="step == 'result'">outline</button>
-      <button id="save-outline" type="button" class="btn btn-success"
-	      ng-click="saveOutline()" target="_blank">save</button>
+      <button type="button" class="btn btn-primary" ng-click="viewOutline()" ng-show="step == 'result'">outline</button>
+      <button id="save-outline" type="button" class="btn btn-success" ng-click="saveOutline()"
+        target="_blank">save</button>
     </div>
-    
-    <button id="save-palette" type="button" class="btn btn-success"
-       ng-click="savePalette()" ng-show="step == 'result'"
-       target="_blank">save palette</button>
-    
+
+    <button id="save-palette" type="button" class="btn btn-success" ng-click="savePalette()" ng-show="step == 'result'"
+      target="_blank">save palette</button>
+
   </div>
-  
+
   <div ng-show="step == 'process'">
     <img id="spinner" src="images/spinner.png"> {{ status }}
   </div>
@@ -82,22 +84,22 @@
 
 
 <div class="col" id="palette">
-  <div class="swatch" ng-repeat="color in palette" ng-style="{ 'background-color': 'rgb(' + color.r + ',' + color.g + ',' + color.b + ')' }">
-    
-    <div class="swatch-label" ng-show="step == 'result' && (view == 'outline' || colorInfoVisible == true)">{{ $index + 1 }}</div>
+  <div class="swatch" ng-repeat="color in palette"
+    ng-style="{ 'background-color': 'rgb(' + color.r + ',' + color.g + ',' + color.b + ')' }">
+
+    <div class="swatch-label" ng-show="step == 'result' && (view == 'outline' || colorInfoVisible == true)">{{ $index +
+      1 }}</div>
     <img ng-click="removeColor(color)" ng-show="step == 'select'" src="images/delete.png">
   </div>
 </div>
 
 
 <div class="col" id="color-info" ng-show="step == 'result'">
-  <button type="button" class="btn btn-secondary"
-       ng-click="showColorInfo()" ng-show="colorInfoVisible == false">show
+  <button type="button" class="btn btn-secondary" ng-click="showColorInfo()" ng-show="colorInfoVisible == false">show
     color info</button>
-  <button type="button" class="btn btn-secondary"
-       ng-click="hideColorInfo()" ng-show="colorInfoVisible == true">hide
+  <button type="button" class="btn btn-secondary" ng-click="hideColorInfo()" ng-show="colorInfoVisible == true">hide
     color info</button>
-  <p ng-repeat="color in palette" ng-show="colorInfoVisible == true" >
+  <p ng-repeat="color in palette" ng-show="colorInfoVisible == true">
     <strong>{{ $index + 1 }}</strong>: {{ color.hex }} |
     <strong>RGB</strong>({{ color.r }}, {{ color.g }}, {{ color.b }}) |
     <strong>HSL</strong>({{ color.hsl.h }}, {{ color.hsl.s }}%, {{ color.hsl.l }}%) |
@@ -111,15 +113,14 @@
   <div class="canvas-container" ng-show="step == 'select' || step == 'process'">
     <canvas id="img-canvas" stage></canvas>
     <div class="sample-point" ng-repeat="color in palette"
-	 ng-style="{ left: (color.x - 5) + 'px', top: (color.y - 5) + 'px' }"></div>
+      ng-style="{ left: (color.x - 5) + 'px', top: (color.y - 5) + 'px' }"></div>
   </div>
-  
+
   <div class="canvas-container" ng-show="step == 'result' && view == 'filled'">
     <canvas id="filled-canvas" result></canvas>
   </div>
-  
+
   <div class="canvas-container" ng-show="step == 'result' && view == 'outline'">
     <canvas id="outline-canvas" result></canvas>
   </div>
 </div>
-
